--- a/src/components/main/Inform.module.css
+++ b/src/components/main/Inform.module.css
@@ -34,15 +34,18 @@
 }
 
 .allbtn {
-  margin: 100px;
-  padding: 10px;
-
+  height: 40px;
+  margin: 50px;
+  padding: 5px;
   border: 1px solid gray;
-  border-radius: 10%;
+  border-radius: 50px;
+  text-align: center;
 }
 .btn {
-  width: 190px;
+  width: 200px;
   height: 40px;
+  border: none;
+  border-radius: 50px;
 }
 
 .btn:active {
