--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,82 +1,77 @@
 .head {
-  /* height: 80px; */
   background-color: aliceblue;
   display: flex;
-}
+  justify-content: center;
 
-.btnLeft {
-  height: 80px;
-  width: 400px;
-  font-size: 20px;
-  color: navy;
-  border: none;
-  background: transparent;
-  letter-spacing: 5px;
-  font-weight: bold;
-}
+  .btnLeft {
+    height: 80px;
+    width: 400px;
+    font-size: 20px;
+    color: navy;
+    border: none;
+    background: transparent;
+    letter-spacing: 5px;
+    font-weight: bold;
+  }
 
-.imgLeft {
-  height: 60px;
-  width: 300px;
-}
+  .moe {
+    display: flex;
+  }
 
-.btn1 {
-  height: 80px;
-  width: 130px;
-  font-size: 10px;
-  border: none;
-  background: transparent;
-  color: navy;
-}
+  .btn1,
+  .btn2,
+  .btn3,
+  .btn4,
+  .btn5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 130px;
+    font-size: 10px;
+    background-color: transparent;
+    border: none;
+    border-left: 0.5px solid rgb(185, 185, 188);
+  }
 
-.btn2 {
-  height: 80px;
-  width: 130px;
-  font-size: 10px;
-  border: none;
-  background: transparent;
-  color: pink;
-}
-.btn3 {
-  height: 80px;
-  width: 130px;
-  font-size: 10px;
-  border: none;
-  background: transparent;
-  color: cadetblue;
-}
-.btn4 {
-  height: 80px;
-  width: 130px;
-  font-size: 10px;
-  border: none;
-  background: transparent;
-  color: blue;
-}
-.btn5 {
-  height: 80px;
-  width: 130px;
-  font-size: 10px;
-  border: none;
-  background: transparent;
-  color: orange;
-}
+  .btn1 {
+    color: navy;
+  }
+  .btn2 {
+    color: pink;
+  }
+  .btn3 {
+    color: cadetblue;
+  }
+  .btn4 {
+    color: blue;
+  }
+  .btn5 {
+    color: orange;
+    border-right: 0.5px solid rgb(185, 185, 188);
+  }
 
-.btnRight {
-  width: 50px;
-  padding: 0px;
-  margin: 0px;
-  border-left: 1px solid gray;
-}
-.moe {
-  color: aliceblue;
-  height: 80px;
-}
+  .btnRight {
+    width: 50px;
+    padding: 0px;
+    padding-top: 16px;
+    margin: 0px;
+  }
+  .btn1.press {
+    box-shadow: 0 4px 0 #d01a0a;
+  }
+  .btn1.press:hover {
+    transform: translateY(4px);
+    box-shadow: none;
+  }
 
-.btn1.press {
-  box-shadow: 0 4px 0 #d01a0a;
-}
-.btn1.press:hover {
-  transform: translateY(4px);
-  box-shadow: none;
+  .headerRightMenu {
+    display: flex;
+
+    .menu {
+      color: red;
+      flex-direction: column;
+    }
+  }
 }
